--- a/style.css
+++ b/style.css
@@ -5,6 +5,33 @@
 }
 
 body {
+    background: linear-gradient(300deg, #Ced1d6, #bfc0c0);
     font-family: "Poppins", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     margin: 0;
+    min-height: 100vh;
 }
+
+input {
+    background-color: #fff;
+    border: none;
+    border-radius:25px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    font-family: inherit;
+    padding:1rem;
+}
+input:focus {
+    outline:none;
+}
+
+.weather {
+    font-size:2rem;
+    text-align:center;
+}
+.weather h2 {
+    margin-bottom: 0;
+}
+
