--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-size:1rem;
     margin: 0;
     min-height: 100vh;
 }
@@ -32,6 +33,8 @@ input:focus {
     text-align:center;
 }
 .weather h2 {
+    display: flex;
+    align-items: center;
     margin-bottom: 0;
 }
 
